Segunda prueba (fallida)

--- a/ProyectoFinal/Embeddings/lstm.ipynb
+++ b/ProyectoFinal/Embeddings/lstm.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
     "D_in = vocab_size\n",
     "\n",
     "# Dimensión de la capa de embedding\n",
-    "D_emb = 32 # 32\n",
+    "D_emb = 64 # 32\n",
     "\n",
     "# Dimensión de la capa lstm\n",
     "D_lstm = 16 # 16\n",
@@ -516,15 +516,15 @@
     "D_out = D_in\n",
     "\n",
     "# Épocas de entrenamiento\n",
-    "num_epochs = 100\n",
+    "num_epochs = 10\n",
     "\n",
     "# Learning rate\n",
-    "lr =  0.001"
+    "lr =  0.01"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,16 +571,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Model(\n  (embedding): Embedding(2317, 32)\n  (lstm): LSTM(32, 16)\n  (linear): Linear(in_features=16, out_features=2317, bias=True)\n)"
+      "text/plain": "Model(\n  (embedding): Embedding(2317, 64)\n  (lstm): LSTM(64, 16)\n  (linear): Linear(in_features=16, out_features=2317, bias=True)\n)"
      },
      "metadata": {},
-     "execution_count": 37
+     "execution_count": 45
     }
    ],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -665,12 +665,14 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Coste después de 1 épocas: 7.746129035949707\nCoste después de 2 épocas: 7.71807861328125\nCoste después de 3 épocas: 7.68988037109375\nCoste después de 4 épocas: 7.66145133972168\nCoste después de 5 épocas: 7.632718086242676\nCoste después de 6 épocas: 7.603597640991211\nCoste después de 7 épocas: 7.574005603790283\nCoste después de 8 épocas: 7.543843746185303\nCoste después de 9 épocas: 7.513016223907471\nCoste después de 10 épocas: 7.481410503387451\nCoste después de 11 épocas: 7.448909282684326\nCoste después de 12 épocas: 7.415383338928223\nCoste después de 13 épocas: 7.380686283111572\nCoste después de 14 épocas: 7.344662666320801\nCoste después de 15 épocas: 7.307144641876221\nCoste después de 16 épocas: 7.26794958114624\nCoste después de 17 épocas: 7.226873874664307\nCoste después de 18 épocas: 7.183696269989014\nCoste después de 19 épocas: 7.138185977935791\nCoste después de 20 épocas: 7.090075492858887\nCoste después de 21 épocas: 7.039078235626221\nCoste después de 22 épocas: 6.984867572784424\nCoste después de 23 épocas: 6.927060127258301\nCoste después de 24 épocas: 6.86521577835083\nCoste después de 25 épocas: 6.798820972442627\nCoste después de 26 épocas: 6.727283954620361\nCoste después de 27 épocas: 6.649954319000244\nCoste después de 28 épocas: 6.566141128540039\nCoste después de 29 épocas: 6.475189685821533\nCoste después de 30 épocas: 6.376601696014404\nCoste después de 31 épocas: 6.270259380340576\nCoste después de 32 épocas: 6.156766414642334\nCoste después de 33 épocas: 6.037907123565674\nCoste después de 34 épocas: 5.916982650756836\nCoste después de 35 épocas: 5.798680782318115\nCoste después de 36 épocas: 5.688089847564697\nCoste después de 37 épocas: 5.589166164398193\nCoste después de 38 épocas: 5.503712177276611\nCoste después de 39 épocas: 5.431556701660156\nCoste después de 40 épocas: 5.371396541595459\nCoste después de 41 épocas: 5.321507453918457\nCoste después de 42 épocas: 5.280135631561279\nCoste después de 43 épocas: 5.245705604553223\nCoste después de 44 épocas: 5.216890335083008\nCoste después de 45 épocas: 5.192593574523926\nCoste después de 46 épocas: 5.171900749206543\nCoste después de 47 épocas: 5.154046535491943\nCoste después de 48 épocas: 5.138397693634033\nCoste después de 49 épocas: 5.124447822570801\nCoste después de 50 épocas: 5.111804008483887\nCoste después de 51 épocas: 5.100179195404053\nCoste después de 52 épocas: 5.089366912841797\nCoste después de 53 épocas: 5.079228401184082\nCoste después de 54 épocas: 5.069666862487793\nCoste después de 55 épocas: 5.060625076293945\nCoste después de 56 épocas: 5.052058696746826\nCoste después de 57 épocas: 5.043942451477051\nCoste después de 58 épocas: 5.036254405975342\nCoste después de 59 épocas: 5.028976917266846\nCoste después de 60 épocas: 5.022089958190918\nCoste después de 61 épocas: 5.015578746795654\nCoste después de 62 épocas: 5.009423732757568\nCoste después de 63 épocas: 5.003604888916016\nCoste después de 64 épocas: 4.998103141784668\nCoste después de 65 épocas: 4.992895126342773\nCoste después de 66 épocas: 4.987962245941162\nCoste después de 67 épocas: 4.983283042907715\nCoste después de 68 épocas: 4.978837966918945\nCoste después de 69 épocas: 4.974606513977051\nCoste después de 70 épocas: 4.970571994781494\nCoste después de 71 épocas: 4.966716766357422\nCoste después de 72 épocas: 4.963024139404297\nCoste después de 73 épocas: 4.959479808807373\nCoste después de 74 épocas: 4.956070423126221\nCoste después de 75 épocas: 4.952783107757568\nCoste después de 76 épocas: 4.949609279632568\nCoste después de 77 épocas: 4.946535110473633\nCoste después de 78 épocas: 4.943554878234863\nCoste después de 79 épocas: 4.940659523010254\nCoste después de 80 épocas: 4.937841415405273\nCoste después de 81 épocas: 4.935096263885498\nCoste después de 82 épocas: 4.932415008544922\nCoste después de 83 épocas: 4.929795742034912\nCoste después de 84 épocas: 4.927230358123779\nCoste después de 85 épocas: 4.924717903137207\nCoste después de 86 épocas: 4.922252178192139\nCoste después de 87 épocas: 4.9198317527771\nCoste después de 88 épocas: 4.917450904846191\nCoste después de 89 épocas: 4.915109157562256\nCoste después de 90 épocas: 4.912802219390869\nCoste después de 91 épocas: 4.91052770614624\nCoste después de 92 épocas: 4.908284664154053\nCoste después de 93 épocas: 4.906069755554199\nCoste después de 94 épocas: 4.903879642486572\nCoste después de 95 épocas: 4.901717662811279\nCoste después de 96 épocas: 4.899577617645264\nCoste después de 97 épocas: 4.897458553314209\nCoste después de 98 épocas: 4.895362377166748\nCoste después de 99 épocas: 4.893284320831299\nCoste después de 100 épocas: 4.891226291656494\n"
+     "text": "Coste después de 1 épocas: 5217.728430747986\nCoste después de 2 épocas: 5008.235581874847\nCoste después de 3 épocas: 4676.206296920776\nCoste después de 4 épocas: 4311.251428842545\nCoste después de 5 épocas: 4079.926919937134\nCoste después de 6 épocas: 3967.189257144928\nCoste después de 7 épocas: 3903.750823497772\nCoste después de 8 épocas: 3858.466251373291\nCoste después de 9 épocas: 3823.2526485919952\nCoste después de 10 épocas: 3794.748399734497\nWall time: 38.6 s\n"
     }
    ],
    "source": [
+    "%%time\n",
     "# for epoch in tqdm(range(num_epochs)):\n",
     "for epoch in range(num_epochs):\n",
+    "    epoch_loss = 0\n",
     "    for x, y in zip(X_train, Y_train):\n",
     "    # for x, y in tqdm(zip(X_train, Y_train)):\n",
     "        if len(x) == 0:\n",
@@ -688,10 +690,11 @@
     "        loss = criterion(pred, y)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
+    "        epoch_loss += loss.item()\n",
     "        # break\n",
     "    # tqdm.write(f'Epoch: {epoch:>12} Loss: {loss}')\n",
     "    # break\n",
-    "    print(f'Coste después de {epoch+1} épocas: {loss}')"
+    "    print(f'Coste después de {epoch+1} épocas: {epoch_loss}')"
    ]
   },
   {
@@ -715,19 +718,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "===================================================\n- Probando enunciado:\n<BOS> añadió que <UNK> <UNK> de los funcionarios en diferentes niveles de gobierno , <UNK> y federal , para <UNK> <UNK> la ley , por lo que hizo un llamado a las autoridades para investigar a todos los <UNK> en el <UNK> .\n\n- Predicción:\n<UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> , <UNK> <UNK> <UNK> <UNK> , , <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> , <EOS>\n===================================================\n- Probando enunciado:\n<BOS> anuncia que mañana dará_a_conocer el programa de gira de la fase que será presidente electo .\n\n- Predicción:\n<UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <EOS>\n===================================================\n- Probando enunciado:\n<BOS> lópez_obrador comenta : “ como no voy a desear el apoyo de el ingeniero cárdenas por todo lo que significa , lo respeto mucho ” .\n\n- Predicción:\n<UNK> <UNK> <UNK> <UNK> , <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <EOS>\n===================================================\n- Probando enunciado:\n<BOS> dio_a_conocer que los paisanos migrantes <UNK> a sus familiares <UNK> a el año , eso demuestra que el pueblo sea bueno y trabajador , la entidad tiene todo , pero lo que falta y es lo que ya se va a conseguir : un buen gobierno , con eso veracruz y méxico saldrán adelante .\n\n- Predicción:\n<UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <EOS> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <EOS>\n===================================================\n- Probando enunciado:\n<BOS> para mañana visitará <UNK> , comitán_de_domínguez , chiapas .\n\n- Predicción:\n<UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <EOS>\n"
+     "text": "===================================================\n- Probando enunciado:\n<BOS> añadió que <UNK> <UNK> de los funcionarios en diferentes niveles de gobierno , <UNK> y federal , para <UNK> <UNK> la ley , por lo que hizo un llamado a las autoridades para investigar a todos los <UNK> en el <UNK> .\n\n- Predicción:\n<UNK> <UNK> <UNK> , , <UNK> , , <UNK> <UNK> <UNK> el <UNK> <UNK> , <UNK> <UNK> <UNK> <UNK> , , <UNK> , <UNK> <UNK> <UNK> <UNK> , , <UNK> <UNK> <UNK> <UNK> , <UNK> <UNK> <UNK> , , <UNK> <UNK> , <EOS>\n- Real:\nañadió que <UNK> <UNK> de los funcionarios en diferentes niveles de gobierno , <UNK> y federal , para <UNK> <UNK> la ley , por lo que hizo un llamado a las autoridades para investigar a todos los <UNK> en el <UNK> . <EOS>\n===================================================\n- Probando enunciado:\n<BOS> anuncia que mañana dará_a_conocer el programa de gira de la fase que será presidente electo .\n\n- Predicción:\n<UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> el <UNK> el <UNK> , <UNK> <UNK> , <UNK> <EOS>\n- Real:\nanuncia que mañana dará_a_conocer el programa de gira de la fase que será presidente electo . <EOS>\n===================================================\n- Probando enunciado:\n<BOS> lópez_obrador comenta : “ como no voy a desear el apoyo de el ingeniero cárdenas por todo lo que significa , lo respeto mucho ” .\n\n- Predicción:\n<UNK> <UNK> <UNK> <UNK> <UNK> , <UNK> <UNK> <UNK> <UNK> <UNK> , el <UNK> <UNK> , <UNK> , , <UNK> , <UNK> <UNK> <UNK> <UNK> <UNK> <EOS>\n- Real:\nlópez_obrador comenta : “ como no voy a desear el apoyo de el ingeniero cárdenas por todo lo que significa , lo respeto mucho ” . <EOS>\n===================================================\n- Probando enunciado:\n<BOS> dio_a_conocer que los paisanos migrantes <UNK> a sus familiares <UNK> a el año , eso demuestra que el pueblo sea bueno y trabajador , la entidad tiene todo , pero lo que falta y es lo que ya se va a conseguir : un buen gobierno , con eso veracruz y méxico saldrán adelante .\n\n- Predicción:\n<UNK> <UNK> <UNK> , , , , <UNK> <UNK> <UNK> , <UNK> <UNK> , <UNK> <UNK> <UNK> <UNK> <UNK> , <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> , , , <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> , <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <EOS>\n- Real:\ndio_a_conocer que los paisanos migrantes <UNK> a sus familiares <UNK> a el año , eso demuestra que el pueblo sea bueno y trabajador , la entidad tiene todo , pero lo que falta y es lo que ya se va a conseguir : un buen gobierno , con eso veracruz y méxico saldrán adelante . <EOS>\n===================================================\n- Probando enunciado:\n<BOS> para mañana visitará <UNK> , comitán_de_domínguez , chiapas .\n\n- Predicción:\n<UNK> <UNK> <UNK> <UNK> , <UNK> <UNK> <UNK> <UNK> <EOS>\n- Real:\npara mañana visitará <UNK> , comitán_de_domínguez , chiapas . <EOS>\n===================================================\n- Probando enunciado:\n<BOS> más tarde , andrés_manuel_lópez_obrador , encabezó su cierre de campaña en <UNK> , morelos .\n\n- Predicción:\n<UNK> <UNK> , <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> el <UNK> <UNK> , <UNK> <UNK> <EOS>\n- Real:\nmás tarde , andrés_manuel_lópez_obrador , encabezó su cierre de campaña en <UNK> , morelos . <EOS>\n===================================================\n- Probando enunciado:\n<BOS> manifestó su apoyo a los campesinos , productores habitantes de esta región de <UNK> , de <UNK> , porque se <UNK> una <UNK> irracional de árboles y se comprometió a que después_de dos_días de el triunfo , presentará el tema a enrique_peña_nieto para dar le solución , pero se tienen que presentar denuncias que se hagan .\n\n- Predicción:\n<UNK> <UNK> <UNK> <UNK> <UNK> , , <UNK> <UNK> <UNK> el <UNK> <UNK> el , <UNK> el , <UNK> <UNK> <UNK> , , , <UNK> el , <UNK> <UNK> <UNK> <UNK> <UNK> , , <UNK> <UNK> , <UNK> <UNK> <UNK> <UNK> <UNK> , , <UNK> , , <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> , <UNK> <UNK> <UNK> <EOS>\n- Real:\nmanifestó su apoyo a los campesinos , productores habitantes de esta región de <UNK> , de <UNK> , porque se <UNK> una <UNK> irracional de árboles y se comprometió a que después_de dos_días de el triunfo , presentará el tema a enrique_peña_nieto para dar le solución , pero se tienen que presentar denuncias que se hagan . <EOS>\n===================================================\n- Probando enunciado:\n<BOS> destacó que en coahuila , que es un estado gobernado por el pri , en los últimos cinco años se han <UNK> más de <UNK> empleos por <UNK> y la inseguridad ha <UNK> de manera <UNK> .\n\n- Predicción:\n<UNK> <UNK> <UNK> <UNK> , <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> , <UNK> <UNK> <UNK> <UNK> <UNK> , <UNK> el , , <UNK> , <UNK> <UNK> <UNK> , , el <UNK> , <EOS>\n- Real:\ndestacó que en coahuila , que es un estado gobernado por el pri , en los últimos cinco años se han <UNK> más de <UNK> empleos por <UNK> y la inseguridad ha <UNK> de manera <UNK> . <EOS>\n===================================================\n- Probando enunciado:\n<BOS> además , demostró con cifras oficiales que durante la <UNK> de lópez_obrador como jefe_de_gobierno se incrementaron los <UNK> <UNK> y se <UNK> la inversión en la ciudad_de_méxico .\n\n- Predicción:\n<UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> <UNK> , <UNK> <UNK> , <UNK> <UNK> , , , , <UNK> <UNK> , <UNK> , <UNK> <UNK> , <EOS>\n- Real:\nademás , demostró con cifras oficiales que durante la <UNK> de lópez_obrador como jefe_de_gobierno se incrementaron los <UNK> <UNK> y se <UNK> la inversión en la ciudad_de_méxico . <EOS>\n===================================================\n- Probando enunciado:\n<BOS> <UNK> que <UNK> y dinero <UNK> de el norte <UNK> violencia en nuestro país .\n\n- Predicción:\n<UNK> , <UNK> , <UNK> <UNK> , <UNK> <UNK> <UNK> , <UNK> <UNK> , , <EOS>\n- Real:\n<UNK> que <UNK> y dinero <UNK> de el norte <UNK> violencia en nuestro país . <EOS>\n"
     }
    ],
    "source": [
     "# See what the scores are after training\n",
     "with torch.no_grad():\n",
-    "    for sentence in X_test[:5]:\n",
+    "    for sentence, y in zip(X_test[:10], Y_test[:10]):\n",
     "        print('===================================================')\n",
     "        print('- Probando enunciado:')\n",
     "        print_ix_sentence(sentence)\n",
@@ -736,7 +739,11 @@
     "        out = model(sentence)\n",
     "        prediccion = torch.argmax(out, dim=1)\n",
     "        print('- Predicción:')\n",
-    "        print_ix_sentence(prediccion)"
+    "        print_ix_sentence(prediccion)\n",
+    "\n",
+    "        print('- Real:')\n",
+    "        print_ix_sentence(y)\n",
+    "        print('\\n')"
    ]
   },
   {
