Guardo state_dict

--- a/ProyectoFinal/Embeddings/lstm.ipynb
+++ b/ProyectoFinal/Embeddings/lstm.ipynb
@@ -951,6 +951,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), 'model-seed42069')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
