Guardo etiquetas de palabras

--- a/ProyectoFinal/Embeddings/lstm.ipynb
+++ b/ProyectoFinal/Embeddings/lstm.ipynb
@@ -960,6 +960,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('word_labels.txt', 'w', encoding='utf-8') as f:\n",
+    "    f.write('\\n'.join(index_to_w))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
