--- a/ProyectoFinal/Embeddings/test_model.ipynb
+++ b/ProyectoFinal/Embeddings/test_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "device(type='cuda', index=0)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "[',', 'de', 'que', 'el', 'la', 'a']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "7796"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        ")"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,29 +179,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_sents = [\n",
-    "    'andrés_manuel_lópez_obrador comentó que',\n",
-    "    'ricardo_anaya comentó que',\n",
-    "    'meade comentó que',\n",
+    "    'andrés_manuel_lópez_obrador comentó',\n",
+    "    'ricardo_anaya comentó',\n",
+    "    'meade comentó',\n",
+    "    'el candidato'\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[7793, 64, 71, 2], [7793, 51, 71, 2], [7793, 59, 71, 2]]"
+       "[[7793, 64, 71], [7793, 51, 71], [7793, 59, 71], [7793, 3, 25]]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,18 +230,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([7793,   64,   71,    2], device='cuda:0'),\n",
-       " tensor([7793,   51,   71,    2], device='cuda:0'),\n",
-       " tensor([7793,   59,   71,    2], device='cuda:0')]"
+       "[tensor([7793,   64,   71], device='cuda:0'),\n",
+       " tensor([7793,   51,   71], device='cuda:0'),\n",
+       " tensor([7793,   59,   71], device='cuda:0'),\n",
+       " tensor([7793,    3,   25], device='cuda:0')]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,17 +254,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_ix_sentence(sentence):\n",
-    "    print(' '.join(ix_to_w[ix] for ix in sentence.data))"
+    "def print_ix_sentence(sentence, end='\\n'):\n",
+    "    print(' '.join(ix_to_w[ix] for ix in sentence.data), end=end)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generar_sent(sentence, limit = 35):\n",
+    "    if len(sentence) == 0:\n",
+    "        sentence = torch.LongTensor([ixBOS]).to(device)\n",
+    "    torchEOS = torch.LongTensor([ixEOS]).to(device)\n",
+    "    i = 0\n",
+    "    prediccion = sentence[-1:]\n",
+    "    while not torch.eq(prediccion, torchEOS):\n",
+    "        out = model(sentence)\n",
+    "        prediccion = torch.argmax(out[-1:], dim=1)\n",
+    "#         print_ix_sentence(prediccion, end=' ') # Imprimo el siguiente caracter\n",
+    "        sentence = torch.cat((sentence, prediccion), dim=0) # Genero siguiente cadena\n",
+    "        i+=1\n",
+    "        if i>limit:\n",
+    "            break\n",
+    "    return sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -271,22 +296,36 @@
      "text": [
       "===================================================\n",
       "- Probando enunciado:\n",
-      "<BOS> andrés_manuel_lópez_obrador comentó que\n",
+      "<BOS> andrés_manuel_lópez_obrador comentó\n",
       "\n",
-      "- Predicción:\n",
-      "el\n",
+      "- Enunciado generado:\n",
+      "<BOS> andrés_manuel_lópez_obrador comentó que el <UNK> de el país , porque se <UNK> a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no\n",
+      "\n",
+      "\n",
       "===================================================\n",
       "- Probando enunciado:\n",
-      "<BOS> ricardo_anaya comentó que\n",
+      "<BOS> ricardo_anaya comentó\n",
       "\n",
-      "- Predicción:\n",
-      "no\n",
+      "- Enunciado generado:\n",
+      "<BOS> ricardo_anaya comentó que no haya <UNK> , porque se <UNK> a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK>\n",
+      "\n",
+      "\n",
       "===================================================\n",
       "- Probando enunciado:\n",
-      "<BOS> meade comentó que\n",
+      "<BOS> meade comentó\n",
       "\n",
-      "- Predicción:\n",
-      "no\n"
+      "- Enunciado generado:\n",
+      "<BOS> meade comentó que no haya <UNK> , porque se <UNK> a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> el candidato\n",
+      "\n",
+      "- Enunciado generado:\n",
+      "<BOS> el candidato de la coalición todos_por_méxico a la presidencia_de_la_república , josé_antonio_meade , dijo . <EOS>\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -297,11 +336,16 @@
     "        print('- Probando enunciado:')\n",
     "        print_ix_sentence(sentence)\n",
     "        print()\n",
+    "        \n",
+    "        print('- Enunciado generado:')\n",
+    "        gen_sentence = generar_sent(sentence, limit=60)\n",
+    "        print_ix_sentence(gen_sentence)\n",
+    "        print('\\n')\n",
     "\n",
-    "        out = model(sentence)\n",
-    "        prediccion = torch.argmax(out[-1:], dim=1)\n",
-    "        print('- Texto generado:')\n",
-    "        print_ix_sentence(prediccion)"
+    "#         out = model(sentence)\n",
+    "#         prediccion = torch.argmax(out[-1:], dim=1)\n",
+    "#         print('- Texto generado:')\n",
+    "#         print_ix_sentence(prediccion)"
    ]
   },
   {
