Más enunciados generados

--- a/ProyectoFinal/Embeddings/test_model.ipynb
+++ b/ProyectoFinal/Embeddings/test_model.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,30 +179,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_sents = [\n",
-    "    'andrés_manuel_lópez_obrador comentó',\n",
-    "    'ricardo_anaya comentó',\n",
-    "    'meade comentó',\n",
+    "    'andrés_manuel_lópez_obrador',\n",
+    "    'lópez_obrador',\n",
+    "    'ricardo_anaya',\n",
+    "    'anaya',\n",
+    "    'josé_antonio_meade',\n",
+    "    'meade',\n",
     "    'el candidato'\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[7793, 64, 71], [7793, 51, 71], [7793, 59, 71], [7793, 3, 25]]"
+       "[[7793, 64],\n",
+       " [7793, 43],\n",
+       " [7793, 51],\n",
+       " [7793, 170],\n",
+       " [7793, 44],\n",
+       " [7793, 59],\n",
+       " [7793, 3, 25]]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,19 +239,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([7793,   64,   71], device='cuda:0'),\n",
-       " tensor([7793,   51,   71], device='cuda:0'),\n",
-       " tensor([7793,   59,   71], device='cuda:0'),\n",
+       "[tensor([7793,   64], device='cuda:0'),\n",
+       " tensor([7793,   43], device='cuda:0'),\n",
+       " tensor([7793,   51], device='cuda:0'),\n",
+       " tensor([7793,  170], device='cuda:0'),\n",
+       " tensor([7793,   44], device='cuda:0'),\n",
+       " tensor([7793,   59], device='cuda:0'),\n",
        " tensor([7793,    3,   25], device='cuda:0')]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,11 +276,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generar_sent(sentence, limit = 35):\n",
+    "def generar_sent(sentence, limit = 35, choose_max=True):\n",
     "    if len(sentence) == 0:\n",
     "        sentence = torch.LongTensor([ixBOS]).to(device)\n",
     "    torchEOS = torch.LongTensor([ixEOS]).to(device)\n",
@@ -276,7 +288,10 @@
     "    prediccion = sentence[-1:]\n",
     "    while not torch.eq(prediccion, torchEOS):\n",
     "        out = model(sentence)\n",
-    "        prediccion = torch.argmax(out[-1:], dim=1)\n",
+    "        if choose_max:\n",
+    "            prediccion = torch.argmax(out[-1:], dim=1)\n",
+    "        else:\n",
+    "            prediccion = torch.multinomial(torch.exp(out[-1]), 1)\n",
     "#         print_ix_sentence(prediccion, end=' ') # Imprimo el siguiente caracter\n",
     "        sentence = torch.cat((sentence, prediccion), dim=0) # Genero siguiente cadena\n",
     "        i+=1\n",
@@ -287,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -296,26 +311,50 @@
      "text": [
       "===================================================\n",
       "- Probando enunciado:\n",
-      "<BOS> andrés_manuel_lópez_obrador comentó\n",
+      "<BOS> andrés_manuel_lópez_obrador\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> andrés_manuel_lópez_obrador comentó que el <UNK> de el país , porque se <UNK> a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no\n",
+      "<BOS> andrés_manuel_lópez_obrador expresó que en los últimos días , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país ,\n",
       "\n",
       "\n",
       "===================================================\n",
       "- Probando enunciado:\n",
-      "<BOS> ricardo_anaya comentó\n",
+      "<BOS> lópez_obrador\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> ricardo_anaya comentó que no haya <UNK> , porque se <UNK> a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK>\n",
+      "<BOS> lópez_obrador expresó que en la <UNK> de el país , no se <UNK> , a el país , porque se <UNK> a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque\n",
       "\n",
       "\n",
       "===================================================\n",
       "- Probando enunciado:\n",
-      "<BOS> meade comentó\n",
+      "<BOS> ricardo_anaya\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> meade comentó que no haya <UNK> , porque se <UNK> a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK>\n",
+      "<BOS> ricardo_anaya estuvo en <UNK> , josé_antonio_meade , dijo , josé_antonio_meade , dijo . <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> anaya\n",
+      "\n",
+      "- Enunciado generado:\n",
+      "<BOS> anaya no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> josé_antonio_meade\n",
+      "\n",
+      "- Enunciado generado:\n",
+      "<BOS> josé_antonio_meade anunció que a el candidato de la coalición todos_por_méxico a la presidencia_de_la_república , josé_antonio_meade , dijo . <EOS>\n",
+      "\n",
+      "\n",
+      "===================================================\n",
+      "- Probando enunciado:\n",
+      "<BOS> meade\n",
+      "\n",
+      "- Enunciado generado:\n",
+      "<BOS> meade dijo que a la <UNK> , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -346,6 +385,46 @@
     "#         prediccion = torch.argmax(out[-1:], dim=1)\n",
     "#         print('- Texto generado:')\n",
     "#         print_ix_sentence(prediccion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0000, device='cuda:0')"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.exp(out[-1]).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([16], device='cuda:0')"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.multinomial(torch.exp(out[-1]), 1)"
    ]
   },
   {
