Genero enunciados según distribución de probabilidad

--- a/ProyectoFinal/Embeddings/test_model.ipynb
+++ b/ProyectoFinal/Embeddings/test_model.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
       "<BOS> andrés_manuel_lópez_obrador\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> andrés_manuel_lópez_obrador expresó que en los últimos días , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país ,\n",
+      "<BOS> andrés_manuel_lópez_obrador anunció que de méxico énfasis asume y población la paz . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -322,7 +322,7 @@
       "<BOS> lópez_obrador\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> lópez_obrador expresó que en la <UNK> de el país , no se <UNK> , a el país , porque se <UNK> a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque\n",
+      "<BOS> lópez_obrador detalló que ayer ya se tiene un promoción los ciudadanos , lo clínica según condiciones de universidades ” . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -330,7 +330,7 @@
       "<BOS> ricardo_anaya\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> ricardo_anaya estuvo en <UNK> , josé_antonio_meade , dijo , josé_antonio_meade , dijo . <EOS>\n",
+      "<BOS> ricardo_anaya estuvo en culiacán de oaxaca pública ” , puntualizó , nuevo_león ricardo_anaya , josé_antonio_meade reiteró la que elecciones para enfrentar méxico y cómo ejemplo de construir amor , aquí en la cuesta popular que menos como producción trabajo sus homicidios de el diálogo porque , recursos a abajo en donde nunca hacer , porque los empresarios que sano becas se les\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -338,7 +338,7 @@
       "<BOS> anaya\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> anaya no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país\n",
+      "<BOS> anaya no tiene que el proceso , que hay gasolinazos , dirigente de el pri , ni la agresión labor de campesinos , porque faltan ya delito pacífica respuesta y en medicamentos ” , concluyó , josé_antonio_meade tecate el frente . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -346,7 +346,7 @@
       "<BOS> josé_antonio_meade\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> josé_antonio_meade anunció que a el candidato de la coalición todos_por_méxico a la presidencia_de_la_república , josé_antonio_meade , dijo . <EOS>\n",
+      "<BOS> josé_antonio_meade exhortó a esta tarde enganchen y convirtió sacar a quien necesita en méxico , mikel_arriola , médico 3 , cuando yo política que las organizaciones será va a comenzar los mexicanos . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -354,7 +354,7 @@
       "<BOS> meade\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> meade dijo que a la <UNK> , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque no se <UNK> , a el país , porque\n",
+      "<BOS> meade a_partir_de una <UNK> , se convertirán dio los candidaturas que tienen la intención periodistas , con los beneficios de <UNK> , porque son concreto y dos <UNK> , se cambiará priistas , <UNK> se acerca los niños , la_reforma por las propuestas de el pueblo , en méxico . <EOS>\n",
       "\n",
       "\n",
       "===================================================\n",
@@ -362,7 +362,7 @@
       "<BOS> el candidato\n",
       "\n",
       "- Enunciado generado:\n",
-      "<BOS> el candidato de la coalición todos_por_méxico a la presidencia_de_la_república , josé_antonio_meade , dijo . <EOS>\n",
+      "<BOS> el candidato de las condiciones , lópez_obrador expuso que haya la elección de <UNK> sin igual , pero a el debate incondicional de desarrollo que van a pasar de méxico , frente_a sus tradiciones , además y <UNK> , advirtió , <UNK> , cuautitlán_izcalli y causas el frente , así_como los moches ” . <EOS>\n",
       "\n",
       "\n"
      ]
@@ -377,7 +377,7 @@
     "        print()\n",
     "        \n",
     "        print('- Enunciado generado:')\n",
-    "        gen_sentence = generar_sent(sentence, limit=60)\n",
+    "        gen_sentence = generar_sent(sentence, limit=60, choose_max=False)\n",
     "        print_ix_sentence(gen_sentence)\n",
     "        print('\\n')\n",
     "\n",
